objects/Account.object
<CustomObject>
    <fields>
        <fullName>Field_A__c</fullName>
        <label>Field A</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_B__c</fullName>
        <label>Field B</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pin_Code__c</fullName>
        <label>Pincode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
</CustomObject>